// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Themed /> renders ThemedText correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      undefined,
    ]
  }
>
  Test Text
</Text>
`;

exports[`<Themed /> renders ThemedView correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#000",
        },
        undefined,
      ]
    }
  >
    Child Text
  </Text>
</View>
`;
